# memflow-mirror

./: Cargo.toml  README.md  runner.sh
.github/workflows/: build.yml
dxgi-capture/: Cargo.toml
dxgi-capture/src/: cursor.rs  dxgi.rs  main.rs
memflow-mirror/: Cargo.toml  build.rs
memflow-mirror/src/: cli.yml  main.rs  window.rs
memflow-mirror/src/resources/: fragment.glsl
mirror/: Cargo.toml
mirror-dto/: Cargo.toml
mirror-dto/src/: lib.rs
mirror-guest/: Cargo.toml  build.rs
mirror-guest/src/: capture.rs  cursor.rs  dxgi.rs  main.rs  service.rs  util.rs
mirror-guest/src/capture/: dxgi.rs  mod.rs
mirror/examples/: mirror.rs
mirror/resources/: fragment_bgra.glsl  fragment_rgba.glsl
mirror/src/: app.rs  capture.rs  capture_reader.rs  cli.yml  config.rs  lib.rs  main.rs  main_old.rs  window.rs
mirror/src/app/: frame_history.rs  tab_viewer.rs
mirror/src/resources/: fragment.glsl
mirror/src/window/: glium_sdl2.rs
