[package]
name = "mirror-guest"
version = "0.1.0"
authors = ["ko1N <ko1N1337@gmail.com>"]
edition = "2018"

[dependencies]
mirror-dto = { path = "../mirror-dto" }
winapi = { version = "0.3.8", features = ["winuser", "libloaderapi", "windef", "minwindef", "shellapi", "libloaderapi", "commctrl", "basetsd"] }
dxgcap = "0.2"
trayicon = "0.1.1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.winres]
FileDescription = "memflow mirror guest agent"
ProductName = "memflow mirror guest-agent"
ProductVersion = "0.1.0"
OriginalFilename = "memflow-mirror.exe"
LegalCopyright = "Copyright © 2020-2021"
Comments = "The memflow mirror guest-agent. See https://github.com/ko1N/memflow-mirror for more about memflow-mirror."
CompanyName = "ko1N"
